# Scram

./: .gitignore  BasicRenderer.cpp  BasicRenderer.h  BuildFunctions.cmake  CMakeLists.txt  Camera.h  ClassDiagram.cd  ConstantHolder.h  Framebuffer.h  LearnOpenGL.cpp  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  OpenGlOperations.hpp  Renderer.h  Scram.filters  Scram.sln  Scram.vcxproj  Scram.vcxproj.filters  ScreenSize.h  Shader.cpp  Shader.h  UniformProvider.cpp  UniformProvider.h  VertexBufferObject.h  Window.h
GPU/: CMakeLists.txt  GPU_export.hpp
GPU/Interface/: Buffer.hpp  CMakeLists.txt  Device.hpp  Pass.hpp  Texture.hpp
GPU/opengl/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Framebuffer.cpp  Framebuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  Renderbuffer.cpp  Renderbuffer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  TextureCube.cpp  TextureCube.hpp  TextureUnit.cpp  TextureUnit.hpp  UniformProvider.cpp  UniformProvider.hpp  VertexArray.cpp  VertexArray.hpp  VertexAttribManager.cpp  VertexAttribManager.hpp
GPU/opengl/shaders/: CMakeLists.txt  Makefile  incremental.vert  postProcessor.frag
GPU/rendering/: CMakeLists.txt  IncRenderer.cpp  IncRenderer.hpp  Pass.cpp  Pass.hpp  PassBuilder.cpp  PassBuilder.hpp  Scene.cpp  Scene.hpp
components/: CMakeLists.txt  CTMaterial.cpp  CTMaterial.h  Camera.h  Camera.hpp  ComponentBase.cpp  ComponentBase.hpp  DirectionalLight.cpp  DirectionalLight.h  DirectionalLight.hpp  Entity.cpp  Entity.h  Entity.hpp  Material.h  Material.hpp  Mesh.h  Mesh.hpp  Model.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCamera.hpp  PointLight.cpp  PointLight.h  PointLight.hpp  SpotLight.cpp  SpotLight.h  SpotLight.hpp  Transform.h  Transform.hpp  components_export.hpp
core/: CMakeLists.txt  CubeData.hpp  Global_Props.hpp  Logger.cpp  Logger.hpp  Preprocess_Definitions.hpp  Struct_Definitions.hpp  core_export.hpp
core/OpenGL/: Buffer.cpp  Buffer.h  Buffer.hpp  CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  Framebuffer.hpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLContext.hpp  Renderbuffer.cpp  Renderbuffer.h  Renderbuffer.hpp  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.hpp  Texture2D.cpp  Texture2D.h  Texture2D.hpp  TextureCube.cpp  TextureCube.h  TextureCube.hpp  TextureUnit.cpp  TextureUnit.h  TextureUnit.hpp  UniformProvider.cpp  UniformProvider.h  UniformProvider.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp  VertexAttribManager.cpp  VertexAttribManager.h  VertexAttribManager.hpp
core/math/: CMakeLists.txt  Math_Functions.hpp  Matrix3.cpp  Matrix3.h  Matrix3.hpp  Matrix4.cpp  Matrix4.h  Matrix4.hpp  Quaternion.h  Quaternion.hpp  Vector2.cpp  Vector2.h  Vector2.hpp  Vector3.cpp  Vector3.h  Vector3.hpp  Vector4.cpp  Vector4.h  Vector4.hpp  linear_algebra.hpp
io/: CMakeLists.txt  IO.cpp  IO.h  IO.hpp  IO_export.hpp
lib/: assimp.lib  glfw3.lib
main/: CMakeLists.txt  Logger.cpp  Logger.h  main.cpp
rendering/: CMakeLists.txt  IncRenderer.cpp  IncRenderer.h  IncRenderer.hpp  Pass.cpp  Pass.h  Pass.hpp  PassBuilder.cpp  PassBuilder.h  PassBuilder.hpp  Scene.cpp  Scene.h  Scene.hpp  rendering_export.hpp
resources/models/: CMakeLists.txt  box.blend  box.blend1  box.glb  bsg_pegasus.mtl
resources/textures/: CmakeLists.txt
shaders/: CMakeLists.txt  basic.frag  basic.vert  dirShadow.frag  dirShadow.vert  incremental.frag  incremental.vert  pointShadow.frag  pointShadow.geom  pointShadow.vert  postProcessor.frag  postProcessor.vert  quad.frag  quad.vert
